# Arduino_CMake

./: CMakeLists.txt  README.md  ex.sh  mk.sh  run.sh
apps/: CMakeLists.txt
apps/blinkLED/: CMakeLists.txt  blinkLED.cc
blinkLED/: CMakeLists.txt  blinkLED.cc
builds/: CMakeLists.txt
builds/arduino/: ArduinoToolchain.cmake  CMakeLists.txt
builds/simulation/: CMakeLists.txt  SimulationToolchain.cmake  main.cpp
cmake/: ArduinoToolchain.cmake
common/: CMakeLists.txt
common/crc/: CMakeLists.txt  crc.cpp  crc.h
common/stlm/: CMakeLists.txt  stlm.h
common/stlm/application_layer/: CMakeLists.txt  application.h
common/stlm/data_link_layer/: CMakeLists.txt  data_link.cpp  data_link.h
libarduinocore/: CMakeLists.txt
libsimulationcore/: CMakeLists.txt
libsimulationcore/delay/: CMakeLists.txt  delay_vt.cpp  delay_vt.h
libsimulationcore/uart/: CMakeLists.txt  uart_vt.cpp  uart_vt.h
sim/: CMakeLists.txt  main.cpp
