
add_library(arduinocore
        Arduino.h
        CDC.cpp
        Client.h
        HardwareSerial.cpp
        HardwareSerial.h
        HardwareSerial0.cpp
        HardwareSerial1.cpp
        HardwareSerial2.cpp
        HardwareSerial3.cpp
        HardwareSerial_private.h
        IPAddress.cpp
        IPAddress.h
        pins_arduino.h
        PluggableUSB.cpp
        PluggableUSB.h
        Print.cpp
        Print.h
        Printable.h
        Server.h
        Stream.cpp
        Stream.h
        Tone.cpp
        USBAPI.h
        USBCore.cpp
        USBCore.h
        USBDesc.h
        Udp.h
        WCharacter.h
        WInterrupts.c
        WMath.cpp
        WString.cpp
        WString.h
        abi.cpp
        binary.h
        hooks.c
        new.cpp
        new.h
        wiring.c
        wiring_analog.c
        wiring_digital.c
        wiring_private.h
        wiring_pulse.S
        wiring_pulse.c
        wiring_shift.c
        ../common/stlm/stlm.h)
